<package>
  <name>rov_actionlib</name>
  <version>0.0.0</version>
  <description>rov_actionlib (based on turtle_actionlib) demonstrates how to write an action server and client with the ArduSub ROV. The server provides and action interface for moving to a goal with the simulator. </description>
  <maintainer email="ecervera@uji.es">Enric Cervera</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/RobInLabUJI/rov_actionlib</url>
  <url type="bugtracker">https://github.com/RobInLabUJI/rov_actionlib/issues</url>

  <author>Enric Cervera</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>turtlesim</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>


